Various small changes

--- a/server/play.html
+++ b/server/play.html
@@ -39,6 +39,7 @@ legal_actions
 
 <table>
     <tr>
+        <th>Move no.</th>
         <th>State</th>
         <th>To play</th>
         <th>Action</th>
